# DeskPilot

./: .gitignore  PLAN.md  README.md  START.md  pyproject.toml
docs/: acceptance.md  actuation.md  architecture.md  benchmarks.md  browser-fixture-proof.md  candidate-fusion.md  computer-vision.md  configuration.md  desktop-io-control-roadmap.md  examples.md  goal-planning.md  human-like-execution-implementation-plan.md  human-like-execution-research.md  human-like-execution-roadmap.md  linkedin-demo.md  linux-x11-adapter-plan.md  local-ai.md  local-report-server-design.md  mixed-fixture-proof.md  mouse-demo.md  native-fixture-proof.md  ocr.md  operator-app.md  packaging.md  personal-routine-assistant-roadmap.md  planner.md  post-v1-backlog.md  project-definition.md  recorder.md  recovery-fixture-proof.md  release-notes.md  roadmap.md  routine-catalog-index.md  routine-documentation-template.md  routine-packs.md  routines.md  safety.md  scheduler.md  screen.md  signed-routine-pack-investigation.md  (+13 more)
examples/: README.md  adversarial-task.yaml  adversarial_fixture.html  browser-task.yaml  browser_fixture.html  capability-showcase-task.yaml  execution-profile-careful-task.yaml  execution-profile-fast-task.yaml  execution-profile-normal-task.yaml  linkedin-approval-manifest.yaml  linkedin-content-variables.yaml  medium-approval-manifest.yaml  medium-content-variables.yaml  mixed-task.yaml  native-task.yaml  native_fixture.py
navigation_playbooks/: README.md  _template.yaml  facebook.yaml  instagram.yaml  linkedin.yaml  medium.yaml  tiktok.yaml  x-twitter.yaml  youtube.yaml
packaging/: default-config.yaml  deskpilot-app.spec  deskpilot.spec  deskpilot_app_entry.py  desktop_agent_entry.py
routine_packs/: README.md
scripts/: build-windows-exe.ps1  build-windows-installer.ps1  run-windows-proof-suite.ps1  verify-windows-package.ps1
tests/: test_action_safety.py  test_actuation.py  test_approval_manifest.py  test_architecture.py  test_benchmark_runner.py  test_benchmarks.py  test_cli.py  test_computer_vision.py  test_config.py  test_content_variables.py  (+55 more)
(+591 files in other folders)
