[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "deskpilot"
version = "0.1.0"
description = "Windows-first local desktop automation framework for owned QA workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/desktop_agent"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
files = ["src", "tests"]
mypy_path = "src"
python_version = "3.12"
strict = true
