[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "deskpilot"
version = "0.1.0"
description = "Windows-first local desktop automation framework for owned QA workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss>=10.0.0",
    "PyYAML>=6.0.2",
]

[project.scripts]
desktop-agent = "desktop_agent.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "types-PyYAML>=6.0.12",
]
windows = [
    "pywinauto>=0.6.8; platform_system == 'Windows'",
]
ocr = [
    "Pillow>=10.4.0",
    "pytesseract>=0.3.13",
]
cv = [
    "numpy>=2.0.0",
    "opencv-python-headless>=4.10.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/desktop_agent"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
files = ["src", "tests"]
mypy_path = "src"
python_version = "3.12"
strict = true
